tests/paczka1/fuzzy1/30741014.err
Error in line 6: A704 A46 79,56
Error in line 5: R0qZHe2Xe3 A46 80,8
Error in line 8: 0JMSeuC A734 -2,3
Error in line 7: R0qZHe2Xe3 A734 44,8
Error in line 1: A704 S698 5,6
Error in line 2: 0JMSeuC A734 86,1
Error in line 12: A704 A46 385,3
Error in line 14: 0JMSeuC S698 38,3
Error in line 18: A704 A734 46,22
Error in line 28: MIMmcpr S698 30,6
Error in line 30: OBKKewmSPN A734 9,9
Error in line 34: OBKKewmSPN A704 91,5
Error in line 35: OBKKewmSPN S698 19,7
